Fixing github url. Adding CNAME to pages

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Firkin
-repo_url: https://github.com/firkinlib
+repo_url: https://github.com/firkinlib/www
 docs_dir: pages
 site_dir: docs
 
